# DRAMUtils

./: CMakeLists.txt
include/: CMakeLists.txt
include/DRAMUtils/DRAMUtils/memspec/: BaseMemSpec.h
include/DRAMUtils/DRAMUtils/memspec/standards/: MemSpecDDR4.h  MemSpecDDR5.h  MemSpecHBM2.h  MemSpecHBM3.h  MemSpecLPDDR4.h  MemSpecLPDDR5.h
include/DRAMUtils/DRAMUtils/util/: id_variant.h  json_utils.h  types.h
include/DRAMUtils/config/: toggling_rate.h
include/DRAMUtils/memspec/: MemSpec.h
include/DRAMUtils/memspec/standards/: MemSpecDDR3.h  MemSpecDDR4.h  MemSpecDDR5.h  MemSpecGDDR5.h  MemSpecGDDR5X.h  MemSpecGDDR6.h  MemSpecHBM2.h  MemSpecHBM3.h  MemSpecHBM3_4.h  MemSpecHBM4.h  MemSpecLPDDR4.h  MemSpecLPDDR5.h  MemSpecLPDDR6.h  MemSpecSTTMRAM.h  MemSpecWideIO.h  MemSpecWideIO2.h
include/DRAMUtils/util/: collapsingvector.h  id_variant.h  json_utils.h  types.h
lib/nlohmann_json/: CMakeLists.txt
tests/: CMakeLists.txt
tests/tests_memspec/: CMakeLists.txt
